@@ -1,6 +1,6 @@
 {
-  "count": 21,
-  "uniques": 11,
+  "count": 22,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2024-01-21T00:00:00Z",
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2024-02-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
